fixed the note part of the card and the grid gap

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,10 +21,9 @@
 
 .comment-card {
     color: white;
-    padding: 0.75rem 1.25rem;
     background-color: $duck-egg-blue;
     text-decoration: none;
-    width: 428px;
+    width: 100%;
     height: 34px;
     border-radius: 0px 0px 10px 10px;
 }
@@ -37,6 +36,7 @@
     word-wrap: break-word;
     background-clip: border-box;
     border-radius: 2px;
-    border: 1px solid rgba(0, 0, 0, 0.125);
+    background-color: #f8f9fa;
+    z-index: 2;
 
 }
