--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -26,8 +26,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content:left;
-  grid-column-gap: 16px;
-  grid-row-gap: 8px;
+  grid-column-gap: 30px;
+  grid-row-gap: 65px;
   margin-top: 70px;
   font-size: 13px;
   text-align: left;
